# Low-Latency-Market-Data-Feed-Handler

./: CMakeLists.txt
include/: FeedHandler.hpp  MarketMessage.hpp  RingBuffer.hpp
src/: CMakeLists.txt  FeedHandler.cpp  main.cpp
tests/: CMakeLists.txt  feed_handler_tests.cpp
